--- a/styles.css
+++ b/styles.css
@@ -5,42 +5,70 @@
 }
 
 body {
+    background-color: #fff6e6;
     font-family: "Archivo Narrow", sans-serif;
-    font-size: 1rem;
+    font-size: 1.2rem;
     height: auto;
     width: 100%;
 }
 
 header {
+    background-color: rgba(255, 156, 6, 0.42);
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-top: 1px solid black;
     display: flex;
     height: auto;
-    margin: 0 auto;
+    margin: 10px auto 0;
+    padding: 20px ;
     width: 80%;
 }
 
 header section:first-child {
     align-items: center;
     display: flex;
-    width: 75%;
+    width: 65%;
 }
 header section:first-child img {
+    border-radius: 50px;
+    box-shadow: 0 0 10px 1px black;
     height: 200px;
-    width: 200px;
+    width : auto;
     margin-right: 20px;
-    margin-bottom: 20px;
-    padding: 20px;
 }
 
+header section:last-child {
+margin-top: 25px}
+
 main {
+    border: 1px solid black;
     display: flex;
     justify-content: center;
     height: auto;
     margin: 0 auto;
+    margin-bottom: 10px;
     width: 80%;
 }
 
 main > section {
     padding: 20px;
+}
+
+main > section:nth-child(1) {
+    width: 40%;
+    background-color: rgba(119, 190, 255, 0.8);
+}
+
+main > section:nth-child(2) {
+    background-color: rgba(119, 190, 255, 0.6);
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    width: 20%;
+}
+
+main > section:nth-child(3) {
+    width: 40%;
+    background-color: rgba(119, 190, 255, 0.4);
 }
 
 h1 {
@@ -65,6 +93,18 @@ h3 {
     text-decoration: underline;
 }
 
+hr {
+    align-self: center;
+    border: 1px solid black;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 50%;
+}
+
+ul > li {
+    list-style: square;
+}
+
 li {
-    list-style-type: none;
+    margin-left: 10px;
 }
