--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,7 @@ main {
     display: flex;
     justify-content: center;
     height: auto;
-    margin: 0 auto;
-    margin-bottom: 10px;
+    margin: 0 auto 10px;
     width: 80%;
 }
 
@@ -107,4 +106,76 @@ ul > li {
 
 li {
     margin-left: 10px;
+}
+
+@media (max-width: 1190px) {
+    header {
+        flex-direction: column;
+        width: 100%;
+        padding: 20px;
+        margin: 0;
+    }
+
+    header section:first-child {
+        justify-content: space-around;
+        width: 100%;
+        text-align: center;
+    }
+
+    header section:first-child img {
+        height: 150px;
+        margin-bottom: 10px;
+    }
+
+    header section:last-child {
+        margin-top: 15px;
+    }
+
+    main {
+        flex-direction: column;
+        width: 100%;
+        margin: 0;
+    }
+
+    main > section:nth-child(1) {
+        width: 100%;
+    }
+    main > section:nth-child(2) {
+        border-bottom: 1px solid black;
+        border-left: none;
+        border-right: none;
+        border-top: 1px solid black;
+        width: 100%;
+    }
+
+    main > section:nth-child(3) {
+        width: 100%;
+    }
+
+    h1, h2 {
+        font-size: 1.8rem;
+    }
+
+    ul, li {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 480px) {
+    header section:first-child img {
+        height: 120px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    h2 {
+        font-size: 1.2rem;
+    }
+
+    ul, li {
+        font-size: 0.9rem;
+    }
+
 }
